TEST_PROGRAMS/VALID/05/if_reg_brace.go
/* If statements */

package main

func main() {
	x := true

	/* Regular braces, no statement */
	if x {
		//Do nothing
	}
}
