TEST_PROGRAMS/INVALID/05/imbalanced_if_parens.go
/* Imbalanced parentheses in if-condition. */

package main

func main() {
	x := 5
	if ((x ==5) { // Error: imbalanced parentheses
		print("x equals 5!!")			
	}
}
